--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorGreen">#0DCA00</color>
+    <color name="colorYellow">#FDFA0E</color>
+    <color name="colorBlue">#0E8DFD</color>
 </resources>
