--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,43 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".WelcomeFragment">
+    android:padding="20dp"
+    tools:context=".types">
+
+    <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/titleRandom"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="60dp"
-        android:padding="15dp"
-        android:text="Le jeu" />
+        android:duplicateParentState="false"
+        android:fontFamily="casual"
+        android:gravity="center_horizontal"
+        android:text="@string/hello_blank_fragment"
+        android:textSize="60sp" />
 
-    <Button
-        android:id="@+id/CatCouleur"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="106dp"
-        android:paddingHorizontal="24dp"
-        android:text="Couleurs" />
-    <Button
-        android:id="@+id/CatVetement"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_margin="106dp"
-        android:paddingHorizontal="24dp"
-        android:text="Vetements" />
-    <Button
-        android:id="@+id/CatAnimal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingHorizontal="24dp"
-        android:text="Animal" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/CatCouleurs"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#673AB7"
+                android:text="🌈 Couleurs 🌈"
+                app:cornerRadius="10dp" />
+
+            <Button
+                android:id="@+id/CatVetements"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8BC34A"
+                android:text="👖Vetements 👖"
+                app:cornerRadius="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/CatAnimaux"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:backgroundTint="#FF9800"
+                android:text="😺 Animaux 🐶"
+                app:cornerRadius="10dp" />
+
+
+        </LinearLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
