--- a/app/src/main/res/layout/fragment_types.xml
+++ b/app/src/main/res/layout/fragment_types.xml
@@ -32,7 +32,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnCouleurs"
+                android:id="@+id/btnNvl1"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="5dp"
