--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="20dp"
-    tools:context=".types">
+    android:id="@+id/fragmentWelcomeView"
+    android:padding="20dp">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -17,7 +17,7 @@
         android:duplicateParentState="false"
         android:fontFamily="casual"
         android:gravity="center_horizontal"
-        android:text="@string/hello_blank_fragment"
+        android:text="@string/choix_fragment"
         android:textSize="60sp" />
 
     <LinearLayout
@@ -48,7 +48,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="#8BC34A"
-                android:text="👖Vetements 👖"
+                android:text="👕 Vetements 👖"
                 app:cornerRadius="10dp" />
         </LinearLayout>
 
