--- a/app/src/main/res/layout/fragment_lvl1_animal.xml
+++ b/app/src/main/res/layout/fragment_lvl1_animal.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/Nvl1Fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Nvl1Fragment">
+    tools:context=".Lvl1AnimalFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -13,4 +11,4 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
-</LinearLayout>
+</FrameLayout>
