--- a/app/src/main/res/layout/fragment_lvl1_animal.xml
+++ b/app/src/main/res/layout/fragment_lvl1_animal.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".Lvl1AnimalFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageView
+        android:id="@+id/imageAnimal"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:src="@drawable/baby_elephant" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/textDropArea"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Arrastra y suelta aquí" />
+
+</LinearLayout>
