--- a/app/src/main/res/layout/fragment_couleur1.xml
+++ b/app/src/main/res/layout/fragment_couleur1.xml
@@ -6,11 +6,10 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <!-- Titre centré en haut -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="start"
+        android:gravity="start|center_vertical"
         android:orientation="horizontal">
 
         <TextView
@@ -21,6 +20,7 @@
             android:textStyle="bold"
             android:layout_gravity="center"
             android:layout_marginLeft="16dp"/>
+
         <TextView
             android:id="@+id/colorLives"
             android:layout_width="wrap_content"
@@ -32,12 +32,11 @@
 
     </LinearLayout>
 
-    <!-- Titre centré en haut -->
-
+    <!-- Deuxième LinearLayout pour les points -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="start"
+        android:gravity="start|center_vertical"
         android:orientation="horizontal">
 
         <TextView
