--- a/app/src/main/res/layout/fragment_lvl1_animal.xml
+++ b/app/src/main/res/layout/fragment_lvl1_animal.xml
@@ -5,19 +5,24 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".Lvl1AnimalFragment">
+    tools:context=".animauxLvls.Lvl1AnimalFragment">
 
     <ImageView
         android:id="@+id/imageAnimal"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:src="@drawable/baby_elephant" />
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:src="@drawable/baby_elephant"
+        android:contentDescription="baby_elephant" />
 
     <TextView
         android:id="@+id/textDropArea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Arrastra y suelta aquí" />
+        android:layout_gravity="center"
+        android:text="Suelta aqui"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:paddingTop="16dp" />
 
 </LinearLayout>
