--- a/app/src/main/res/layout/fragment_lvl1_animal.xml
+++ b/app/src/main/res/layout/fragment_lvl1_animal.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1F1F1"
+    android:foregroundTint="#FFFFFF"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".animauxLvls.Lvl1AnimalFragment">
@@ -12,17 +14,27 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:src="@drawable/baby_elephant"
-        android:contentDescription="baby_elephant" />
+        android:clickable="true"
+        android:contentDescription="baby_elephant"
+        android:src="@drawable/baby_elephant" />
 
-    <TextView
-        android:id="@+id/textDropArea"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Suelta aqui"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:paddingTop="16dp" />
+    <FrameLayout
+        android:id="@+id/dropArea"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_margin="50dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/holo_blue_bright">
 
+        <TextView
+            android:id="@+id/nameAnimal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="false"
+            android:paddingTop="16dp"
+            android:text="Suelta aqui"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </FrameLayout>
 </LinearLayout>
