--- a/app/src/main/res/layout/fragment_win_or_lose.xml
+++ b/app/src/main/res/layout/fragment_win_or_lose.xml
@@ -9,7 +9,9 @@
         android:id="@+id/resultTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_margin="16dp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:text="Victoire"
         android:textSize="24sp"
         android:layout_marginTop="100dp"/>
