--- a/app/src/main/res/layout/fragment_lvl2_animal.xml
+++ b/app/src/main/res/layout/fragment_lvl2_animal.xml
@@ -12,18 +12,11 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="30dp"
         android:fontFamily="casual"
         android:gravity="center"
-        android:text="Conoces estos animales?"
-        android:textSize="48sp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Repite sus nombres"
-        android:textSize="20sp" />
+        android:text="Écoute les noms des animaux"
+        android:textSize="34sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -72,7 +65,7 @@
             android:layout_height="150dp"
             android:layout_weight="0"
             android:backgroundTint="#E91E63"
-            android:text="Lion"
+            android:text="Giraffe"
             android:textSize="20sp"
             app:icon="@drawable/baby_giraffe"
             app:iconGravity="top"
@@ -99,8 +92,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:gravity="center|center_horizontal"
-        android:text="Next"
         android:enabled="false"
-        app:cornerRadius="15dp" />
+        android:gravity="center|center_horizontal"
+        android:text="Suivant"
+        app:cornerRadius="10dp" />
 </LinearLayout>
