--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorGreen">#0DCA00</color>
     <color name="colorYellow">#FDFA0E</color>
     <color name="colorBlue">#0E8DFD</color>
+    <color name="correctColor">#4CAF50</color>
+    <color name="incorrectColor">#F44336</color>
 </resources>
