--- a/app/src/main/res/layout/fragment_couleur1.xml
+++ b/app/src/main/res/layout/fragment_couleur1.xml
@@ -5,32 +5,53 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/titleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="30dp"
+        android:text="Trouve la couleur !"
+        android:textSize="34sp"/>
+
+    <TextView
+        android:id="@+id/trueColorText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Couleur"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="start|center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="20dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Vies : "
-            android:textSize="24sp"
-            android:textStyle="bold"
             android:layout_gravity="start"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            android:text="Vies : "
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/colorLives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginTop="16dp"
             android:text="3"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_gravity="start"
-            android:layout_marginTop="16dp" />
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Deuxième LinearLayout pour les points -->
@@ -39,16 +60,17 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:gravity="start|center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="20dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:layout_marginStart="16dp"
             android:text="Points : "
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_marginStart="16dp"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/colorPoints"
@@ -57,30 +79,8 @@
             android:layout_gravity="start"
             android:text="0"
             android:textSize="24sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trouve la couleur !"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
-
-    <TextView
-        android:id="@+id/trueColorText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Couleur"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
 
     <!-- 4 ronds de couleurs alignés en dessous -->
 
