--- a/app/src/main/res/layout/fragment_lvl1_animal.xml
+++ b/app/src/main/res/layout/fragment_lvl1_animal.xml
@@ -154,7 +154,7 @@
                     android:layout_margin="10dp"
                     android:clickable="false"
                     android:gravity="center"
-                    android:text="Cow!"
+                    android:text="Cow"
                     android:textSize="34sp"
                     android:textStyle="bold" />
             </FrameLayout>
@@ -176,7 +176,7 @@
                     android:layout_margin="10dp"
                     android:clickable="false"
                     android:gravity="center"
-                    android:text="Lion!"
+                    android:text="Lion"
                     android:textSize="34sp"
                     android:textStyle="bold" />
             </FrameLayout>
@@ -191,6 +191,7 @@
             android:layout_weight="0"
             android:enabled="false"
             android:text="Suivant"
+            android:textStyle="bold"
             app:cornerRadius="10dp" />
 
     </LinearLayout>
