--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentWelcomeView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:id="@+id/fragmentWelcomeView"
-    android:padding="20dp">
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="30dp"
         android:duplicateParentState="false"
         android:fontFamily="casual"
         android:gravity="center_horizontal"
@@ -23,6 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
@@ -39,6 +40,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="#673AB7"
                 android:text="🌈 Couleurs 🌈"
+                android:textStyle="bold"
                 app:cornerRadius="10dp" />
 
             <Button
@@ -49,6 +51,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="#8BC34A"
                 android:text="👕 Vetements 👖"
+                android:textStyle="bold"
                 app:cornerRadius="10dp" />
         </LinearLayout>
 
@@ -65,6 +68,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="#FF9800"
                 android:text="😺 Animaux 🐶"
+                android:textStyle="bold"
                 app:cornerRadius="10dp" />
 
 
