--- a/app/src/main/res/layout/fragment_lvl1_couleur.xml
+++ b/app/src/main/res/layout/fragment_lvl1_couleur.xml
@@ -14,6 +14,7 @@
         android:paddingLeft="20dp">
 
         <TextView
+            android:fontFamily="casual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
@@ -25,6 +26,7 @@
 
         <TextView
             android:id="@+id/colorLives"
+            android:fontFamily="casual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
@@ -44,6 +46,7 @@
         android:paddingLeft="20dp">
 
         <TextView
+            android:fontFamily="casual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
@@ -54,6 +57,7 @@
 
         <TextView
             android:id="@+id/colorPoints"
+            android:fontFamily="casual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
@@ -64,6 +68,7 @@
 
     <TextView
         android:id="@+id/titleText"
+        android:fontFamily="casual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -73,6 +78,7 @@
 
     <TextView
         android:id="@+id/trueColorText"
+        android:fontFamily="casual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
