--- a/app/src/main/res/layout/fragment_types.xml
+++ b/app/src/main/res/layout/fragment_types.xml
@@ -20,7 +20,7 @@
 
         android:layout_margin="30dp"
         android:gravity="center_horizontal"
-        android:text="Choisi le niveau"
+        android:text="Choisis le niveau"
         android:textSize="60sp" />
 
     <LinearLayout
