--- a/app/src/main/res/layout/fragment_win_or_lose.xml
+++ b/app/src/main/res/layout/fragment_win_or_lose.xml
@@ -7,6 +7,7 @@
 
     <TextView
         android:id="@+id/resultTextView"
+        android:fontFamily="casual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
