--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,7 +3,8 @@
     <style name="Base.Theme.PetitLingo" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">#FFFFFF</item>
+
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
